# dnn-svm

./: .dockerignore  Makefile  README.md  pyproject.toml  tox.ini
dlsvm/: __init__.py
dlsvm/models/: __init__.py  dnn_svm.py
dlsvm/tools/: __init__.py  builder.py  label_converter.py
docker/: Dockerfile.cpu  Dockerfile.gpu
notebooks/2020former/: .gitignore  200518-iris-softmax.ipynb  200518-iris-softmax.py  200518-iris-svm.ipynb  200518-iris-svm.py  200520-digits-softmax.ipynb  200520-digits-softmax.py  200520-digits-svm.ipynb  200520-digits-svm.py  200521-digits-cnn-softmax.ipynb  200521-digits-cnn-softmax.py  200521-digits-cnn-svm.ipynb  200521-digits-cnn-svm.py  200522-analysis-iris-digits.ipynb  200522-analysis-iris-digits.py
notebooks/configs/: jupyter_notebook_config.py
notebooks/configs/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
