[tool.poetry]
name = "dnn-svm"
version = "0.0.1"
description = ""
authors = ["S.Sakagawa <s.shusky97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.2"
scikit-learn = "^0.20.3"
seaborn = "^0.9.0"
tqdm = "^4.32"
keras = "^2.2"
tensorflow-probability = "^0.7.0"
optuna = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^1.2"
jupytext = "^1.1"
flake8 = "^3.7"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
